--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# System temps
+.DS_store
+sbi-logs
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -143,6 +148,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+sthnrn/
 
 # Spyder project settings
 .spyderproject
